# OO2026-olioviikkoteht-v-t

./: README.md
viikko1/: CMakeLists.txt  olioteht1.cpp
week2/oliovk2kotiteht/: CMakeLists.txt  game.cpp  game.h  main.cpp
week3/oliovk3kotiteht/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
week4/oliovk4kotiteht/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
week5/oliovk5kotiteht/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
week6/oliovk6kotiteht/: CMakeLists.txt  main.cpp  student.cpp  student.h
